feat: #16 format code, and add license info, add Unit Test Project and implement UnitTest CI

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,7 +58,10 @@ jobs:
       run: |
         cmake -S. -DBUILD_SDL=true
         make
-      
+    - name: UnitTest
+      run: |
+        ctest
+        
     - name: Package
       run: |
         mkdir Build
