feat: #16 Fix Build UnitTest on Cygwin

--- a/UnitTest/TestApp/CMakeLists.txt
+++ b/UnitTest/TestApp/CMakeLists.txt
@@ -22,4 +22,9 @@ else()
 	target_link_libraries(TestApp SkylichtClient)
 endif()
 
+if (CYGWIN)
+	# SwapBuffers, ChoosePixelFormat
+	target_link_libraries(TestApp gdi32)
+endif()
+
 add_test(NAME TestApp COMMAND $<TARGET_FILE:TestApp>)
