--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,75 +2,93 @@ name: build
 
 on: [push]
 
+# Software
+# https://help.github.com/en/actions/automating-your-workflow-with-github-actions/software-installed-on-github-hosted-runners
+
 jobs:
   Emscripten:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
     - uses: actions/checkout@v1
-    
     - name: Install Dependencies
+      shell: cmd
       run: |
-        git clone https://github.com/emscripten-core/emsdk.git
-        cd emsdk
-        git pull
-        ./emsdk install latest-upstream
-        ./emsdk activate latest-upstream
-        source ./emsdk_env.sh
-        ls -l upstream/emscripten/system/include
-        cd ..
-        wget -O SDL2-version_18.zip -q https://github.com/emscripten-ports/SDL2/archive/version_18.zip
-        mkdir InstallLibs
-        mkdir InstallLibs/SDL2
-        7z x SDL2-version_18.zip -oInstallLibs
-        ls -l InstallLibs
-        cp -p InstallLibs/SDL2-version_18/include/*.* InstallLibs/SDL2/
-        
+       git clone https://github.com/emscripten-core/emsdk.git
+       cd emsdk
+       call emsdk.bat install latest-upstream
+       call emsdk.bat activate latest-upstream
+       cd ..
+       echo Choco install
+       dir C:\ProgramData\Chocolatey\bin
+       echo Install WGET
+       choco install wget -y
+       echo Install SDL2LIB
+       wget -O SDL2-version_18.zip -q https://github.com/emscripten-ports/SDL2/archive/version_18.zip
+       mkdir InstallLibs
+       mkdir InstallLibs\SDL2
+       7z x SDL2-version_18.zip -oInstallLibs
+       copy InstallLibs\SDL2-version_18\include\*.* InstallLibs\SDL2
+       echo Install success
     - name: Build
-      run: |        
-        cmake -DCMAKE_TOOLCHAIN_FILE=emsdk/upstream/emscripten/cmake/Modules/Platform/Emscripten.cmake  -S.
-        make
-        
+      shell: cmd
+      run: |
+       cd Assets
+       python BuildAssetBundles.py
+       cd ..
+       mkdir Bin\BuiltIn
+       copy Bin\BuiltIn.zip Bin\BuiltIn
+       call emsdk\emsdk_env.bat
+       cmake -DCMAKE_TOOLCHAIN_FILE=emsdk\upstream\emscripten\cmake\Modules\Platform\Emscripten.cmake  -S . -B ./PrjEmscripten -G "MinGW Makefiles" -DCMAKE_SH="CMAKE_SH-NOTFOUND"
+       mingw32-make -C PrjEmscripten
     - name: Package
+      shell: cmd
       run: |
         mkdir Build
-        ls -l Bin
-        7z a Build/Skylicht_Demo_Emscripten.zip Bin/MainApp*
-        7z a Build/Skylicht_Demo_Emscripten.zip Bin/*.zip
-        
+        type Version.txt
+        set /p CONFIG_VERSION=<Version.txt
+        set file_version=%CONFIG_VERSION:.=_%
+        set output=Build\SkylichtDemo_%file_version%__Emscripten.zip
+        7z a %output% Bin\MainApp*
+        7z a %output% Bin\*.zip        
     - name: Result
       uses: actions/upload-artifact@v1
       with:
-        name: Skylicht_Demo_Emscripten
-        path: Build/Skylicht_Demo_Emscripten.zip
+        name: SkylichtDemo_Emscripten
+        path: Build
           
   Linux:
     runs-on: ubuntu-latest    
     steps:
-    - uses: actions/checkout@v1
-      
+    - uses: actions/checkout@v1      
     - name: Install Dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y libglfw3-dev libsdl2-dev
-        cmake --version
-      
+        sudo apt-get install -y libglfw3-dev libsdl2-dev        
+        sudo apt remove --purge --auto-remove cmake
+        wget -q https://github.com/Kitware/CMake/releases/download/v3.15.5/cmake-3.15.5-Linux-x86_64.tar.gz
+        tar -zxvf cmake-3.15.5-Linux-x86_64.tar.gz        
     - name: Build
       run: |
-        cmake -S. -DBUILD_SDL=true
-        make
+        export PATH="./cmake-3.15.5-Linux-x86_64/bin:$PATH"
+        cmake -S. -BPrjLinux -DBUILD_SDL=true
+        cd Assets
+        python BuildAssetBundles.py
+        cd ..        
+        make -C PrjLinux        
     - name: Unit Test
       run: |
-        ctest --verpose
-        
+        ctest --verpose        
     - name: Package
       run: |
         mkdir Build
         ls -l Bin
-        7z a Build/Skylicht_Demo_Linux.zip Bin/MainApp*
-        7z a Build/Skylicht_Demo_Emscripten.zip Bin/*.zip
-        
+        version=$(cat "Version.txt")
+        file_version=${version//./_}
+        output=Build/SkylichtDemo_${file_version}_Linux.zip
+        7z a ${output} Bin/MainApp*
+        7z a ${output} Bin/*.zip        
     - name: Result
       uses: actions/upload-artifact@v1
       with:
-        name: Skylicht_Demo_Linux
-        path: Build/Skylicht_Demo_Linux.zip
+        name: SkylichtDemo_Linux
+        path: Build
