--- a/Projects/Demo/CMakeLists.txt
+++ b/Projects/Demo/CMakeLists.txt
@@ -3,10 +3,10 @@ include_directories(
 	${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/SkylichtClient/Source
 	${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Irrlicht/Include	
 	${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/SkylichtEngine/Source
+	${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/SkylichtComponents/Source
 	${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Demo/Source
 	#${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/SkylichtPhysics/Source
-	#${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/SkylichtAudio/Source
-	#${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/SkylichtComponents/Source
+	#${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/SkylichtAudio/Source	
 )
 
 #if (BUILD_SKYLICHT_NETWORK)
