--- a/Projects/SkylichtClient/CMakeLists.txt
+++ b/Projects/SkylichtClient/CMakeLists.txt
@@ -2,10 +2,10 @@ include_directories(
 	${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/SkylichtSystem/Source
 	${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/SkylichtClient/Source
 	${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Irrlicht/Include	
-	${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/SkylichtEngine/Source	
+	${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/SkylichtEngine/Source
+	${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/SkylichtComponents/Source
 	#${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/SkylichtPhysics/Source
 	#${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/SkylichtAudio/Source
-	#${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/SkylichtComponents/Source
 )
 
 #if(BUILD_DEBUG_VLD)
@@ -31,4 +31,4 @@ target_precompiled_header(SkylichtClient ./Source/pch.cpp ${skylicht_client_sour
 
 set_target_properties(SkylichtClient PROPERTIES VERSION ${SKYLICHT_VERSION})
 
-target_link_libraries(SkylichtClient SkylichtEngine)
+target_link_libraries(SkylichtClient SkylichtEngine SkylichtComponents)
