--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -74,7 +74,7 @@ jobs:
        mkdir PrjUWP\Projects\MainApp
        mkdir PrjUWP\Projects\MainApp\Assets
        copy Projects\MainApp\Platforms\UWP\Assets\*.* PrjUWP\Projects\MainApp\Assets
-       copy Bin\BuiltIn* PrjUWP\Projects\MainApp\Assets       
+       copy Bin\*.zip PrjUWP\Projects\MainApp\Assets
        cmake -S . -B ./PrjUWP -G "Visual Studio 16 2019" -A x64 -DCMAKE_SYSTEM_NAME=WindowsStore -DCMAKE_SYSTEM_VERSION=10.0
        cmake --build ./PrjUWP --config "Release"
     - name: Package
