feat: #50 Implement Glyph/GlyphFreetype for ttf font loader

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,6 +78,12 @@ option(BUILD_SDL "Build with Simple DirectMedia Layer is a cross-platform develo
 
 option(BUILD_IMGUI "Build Ocornut Imgui" ON)
 
+option(BUILD_FREETYPE "Build Font Freetype" ON)
+
+if (BUILD_FREETYPE)
+	add_definitions(-DUSE_FREETYPE)
+endif()
+
 # skylicht network
 if (BUILD_SKYLICHT_NETWORK)
 	add_definitions(-DUSE_SKYLICHT_NETWORK)
