feat: #50 Implement atlas freetype

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,6 +82,7 @@ option(BUILD_FREETYPE "Build Font Freetype" ON)
 
 if (BUILD_FREETYPE)
 	add_definitions(-DUSE_FREETYPE)
+	add_definitions(-DFT2_BUILD_LIBRARY)
 endif()
 
 # skylicht network
